# imagez

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
src/imagez/: __init__.py  a.py  api.py  main.py  template.html  template.py
