[project]
name = "imagez"
version = "0.1.0"
description = "Simple image tools!!! SIMPLE SIMPLE"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.2",
    "pillow>=11.3.0",
    "reportlab>=4.4.3",
    "typer>=0.16.1",
]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[project.scripts]
imagez = "imagez:cli_app"
imagez_web = "imagez:run_web_app"
